--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
 
 	// Redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	//kafka
+	implementation 'org.springframework.boot:spring-boot-starter-kafka'
 }
 
 tasks.named('test') {
