feat : 프로메테우스 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,10 @@ dependencies {
 
 	//kafka
 	implementation 'org.springframework.boot:spring-boot-starter-kafka'
+
+	// Actuator + Prometheus 메트릭 노출
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'io.micrometer:micrometer-registry-prometheus'
 }
 
 tasks.named('test') {
